<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.android.inventoryapp.DetailActivity">

    <EditText
        android:id="@+id/name_editext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/type_product_name"
        android:inputType="textCapWords"
        android:textAppearance="?android:textAppearanceMedium" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@color/colorAccent"
        android:text="@string/sale"
        android:textColor="@color/icons" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quantity_text_detail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Quantity : " />

        <TextView
            android:id="@+id/quantity_detail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:text="0"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="0" />

    </LinearLayout>

    <Button
        android:id="@+id/receive_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:padding="4dp"
        android:text="@string/receive_shipment"
        android:textColor="@color/icons" />

    <Button
        android:id="@+id/order_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:padding="4dp"
        android:text="@string/order_more"
        android:textColor="@color/icons" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/price_text_detail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="Price : $" />

        <EditText
            android:id="@+id/price_detail_editext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/enter_product_price"
            android:inputType="number"
            android:textAppearance="?android:textAppearanceMedium" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="95dp"
        android:layout_height="95dp"
        android:background="@color/colorAccent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_add_black" />

</LinearLayout>
